# yolov8_openvino_cpp

./: CMakeLists.txt  det_structs.h  main  main.cpp  openvino_bridge.cpp  openvino_bridge.h
algorithms/: yolov8.cpp  yolov8.h
resource/models/: yolov8s_post_fp16.mapping  yolov8s_post_fp16.xml  yolov8s_post_fp32.mapping  yolov8s_post_fp32.xml
